Some new directions, not sure where they will end up

--- a/src/Magnum.Serialization.Tests/Magnum.Serialization.Tests.csproj
+++ b/src/Magnum.Serialization.Tests/Magnum.Serialization.Tests.csproj
@@ -45,8 +45,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Another_Sepcs.cs" />
     <Compile Include="Bencoder_Specs.cs" />
+    <Compile Include="Deserializer_Specs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReflectiveVisitor_Exp.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Magnum.Serialization\Magnum.Serialization.csproj">
