--- a/src/Magnum.Transport.Tests/Magnum.Transport.Tests.csproj
+++ b/src/Magnum.Transport.Tests/Magnum.Transport.Tests.csproj
@@ -4,11 +4,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.50727</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{A6D8A4A5-D6F9-44DD-BFD4-F721CA9F3E01}</ProjectGuid>
+    <ProjectGuid>{CE4C6C08-AA9E-45A4-A12E-BB6835DA91D8}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Magnum.Serialization</RootNamespace>
-    <AssemblyName>Magnum.Serialization</AssemblyName>
+    <RootNamespace>Magnum.Transport.Tests</RootNamespace>
+    <AssemblyName>Magnum.Transport.Tests</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -28,20 +28,39 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="nunit.framework, Version=2.4.6.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\nunit.framework.dll</HintPath>
+    </Reference>
+    <Reference Include="Rhino.Mocks, Version=3.3.0.906, Culture=neutral, PublicKeyToken=0b3305902db7183f, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\Rhino.Mocks.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BasicObjectSerializer.cs" />
-    <Compile Include="BEncodeObjectFormatter.cs" />
-    <Compile Include="Bencoder.cs" />
-    <Compile Include="BDecode.cs" />
-    <Compile Include="IObjectFormatter.cs" />
-    <Compile Include="IObjectSerializer.cs" />
+    <Compile Include="IConnection.cs" />
+    <Compile Include="IParticipantConfiguration.cs" />
+    <Compile Include="MeshAuthorizationKey.cs" />
+    <Compile Include="Participant.cs" />
+    <Compile Include="ParticipantConfiguration.cs" />
+    <Compile Include="PeerConnection.cs" />
+    <Compile Include="PeerInitiator.cs" />
+    <Compile Include="Peer_Specs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SerializationOptimizer.cs" />
-    <Compile Include="XmlObjectFormatter.cs" />
+    <Compile Include="When_a_service_instance_is_started.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Magnum.Serialization\Magnum.Serialization.csproj">
+      <Project>{A6D8A4A5-D6F9-44DD-BFD4-F721CA9F3E01}</Project>
+      <Name>Magnum.Serialization</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Magnum.Transport\Magnum.Transport.csproj">
+      <Project>{B7BB5B70-1B0E-458B-95F4-678F2AE5C99A}</Project>
+      <Name>Magnum.Transport</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
