--- a/src/Magnum.Transport/Magnum.Transport.csproj
+++ b/src/Magnum.Transport/Magnum.Transport.csproj
@@ -4,11 +4,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.50727</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{A6D8A4A5-D6F9-44DD-BFD4-F721CA9F3E01}</ProjectGuid>
+    <ProjectGuid>{B7BB5B70-1B0E-458B-95F4-678F2AE5C99A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Magnum.Serialization</RootNamespace>
-    <AssemblyName>Magnum.Serialization</AssemblyName>
+    <RootNamespace>Magnum.Transport</RootNamespace>
+    <AssemblyName>Magnum.Transport</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -28,20 +28,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BasicObjectSerializer.cs" />
-    <Compile Include="BEncodeObjectFormatter.cs" />
-    <Compile Include="Bencoder.cs" />
-    <Compile Include="BDecode.cs" />
-    <Compile Include="IObjectFormatter.cs" />
-    <Compile Include="IObjectSerializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SerializationOptimizer.cs" />
-    <Compile Include="XmlObjectFormatter.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
