--- a/src/Magnum.Core.Tests/Magnum.Core.Specs.csproj
+++ b/src/Magnum.Core.Tests/Magnum.Core.Specs.csproj
@@ -1,19 +1,17 @@
-﻿<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.50727</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{700795B6-AEE6-4623-8E1B-318B9D6CFC12}</ProjectGuid>
+    <ProjectGuid>{B7A7FA4C-2E26-477D-9B23-00099C9E7241}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Default.Tests</RootNamespace>
-    <AssemblyName>Default.Tests</AssemblyName>
-    <FileUpgradeFlags>
-    </FileUpgradeFlags>
-    <UpgradeBackupLocation>
-    </UpgradeBackupLocation>
-    <OldToolsVersion>2.0</OldToolsVersion>
+    <RootNamespace>Magnum.Core.Tests</RootNamespace>
+    <AssemblyName>Magnum.Core.Tests</AssemblyName>
+    <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
+    <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -33,10 +31,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\lib\log4net.dll</HintPath>
-    </Reference>
     <Reference Include="nunit.framework, Version=2.4.6.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\nunit.framework.dll</HintPath>
@@ -50,18 +44,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Integration\Storage_Specs.cs" />
+    <Compile Include="Check_Specs.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Specification.cs" />
+    <Compile Include="Specifications\Specification_Specs.cs" />
+    <Compile Include="TransactionScope_Specs.cs" />
+    <Compile Include="Validation_Specs.cs" />
+    <Compile Include="Validators\EmailAddressPropertyValidator_Specs.cs" />
+    <Compile Include="Validators\EntityValidator_Specs.cs" />
+    <Compile Include="Validators\Member.cs" />
+    <Compile Include="Validators\PropertyValidator_Specs.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Magnum\Magnum.csproj">
-      <Project>{FAAC0E55-2820-4014-BB54-8A1E72C97A29}</Project>
-      <Name>Magnum</Name>
+    <ProjectReference Include="..\Magnum.Core\Magnum.Core.csproj">
+      <Project>{C2DE93CD-C97E-40B6-A356-B753DA04E0AF}</Project>
+      <Name>Magnum.Core</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Properties\" />
-  </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
