--- a/src/Magnum.Common/Magnum.Common.csproj
+++ b/src/Magnum.Common/Magnum.Common.csproj
@@ -49,13 +49,16 @@
     <Compile Include="ComparisonComparer.cs" />
     <Compile Include="DateTimeExtensions.cs" />
     <Compile Include="DictionaryExtensions.cs" />
+    <Compile Include="IAggregateRoot.cs" />
     <Compile Include="LinkedComparer.cs" />
     <Compile Include="ObjectExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Range.cs" />
     <Compile Include="RangeBuilder.cs" />
     <Compile Include="RangeEnumerator.cs" />
-    <Compile Include="Repository\IRepository.cs" />
+    <Compile Include="IRepository.cs" />
+    <Compile Include="RepositoryBase.cs" />
+    <Compile Include="RepositoryCache.cs" />
     <Compile Include="ReverseComparer.cs" />
     <Compile Include="TimeSpanExtensions.cs" />
   </ItemGroup>
