--- a/src/Magnum.Common.Tests/Magnum.Common.Tests.csproj
+++ b/src/Magnum.Common.Tests/Magnum.Common.Tests.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="DateTimeExtension_Specs.cs" />
     <Compile Include="DictionaryExtension_Specs.cs" />
+    <Compile Include="ExtendedFunctionTimer.cs" />
     <Compile Include="Metric_Specs.cs" />
     <Compile Include="ObjectExtension_Specs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
