--- a/src/Magnum.Common/Magnum.Common.csproj
+++ b/src/Magnum.Common/Magnum.Common.csproj
@@ -69,6 +69,11 @@
     <Compile Include="RepositoryCache.cs" />
     <Compile Include="ReverseComparer.cs" />
     <Compile Include="FunctionTimer.cs" />
+    <Compile Include="Serialization\BinarySerializationReader.cs" />
+    <Compile Include="Serialization\BinarySerializationWriter.cs" />
+    <Compile Include="Serialization\ISerializationReader.cs" />
+    <Compile Include="Serialization\ISerializationWriter.cs" />
+    <Compile Include="Serialization\SerializationUtil.cs" />
     <Compile Include="TimeSpanExtensions.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
