--- a/src/Magnum.Common/Magnum.Common.csproj
+++ b/src/Magnum.Common/Magnum.Common.csproj
@@ -56,6 +56,9 @@
     <Compile Include="IAggregateRoot.cs" />
     <Compile Include="IRepositoryFactory.cs" />
     <Compile Include="LinkedComparer.cs" />
+    <Compile Include="rhino-commons\Collection.cs" />
+    <Compile Include="rhino-commons\Exceptions\ElementNotFoundException.cs" />
+    <Compile Include="rhino-commons\Guard.cs" />
     <Compile Include="rhino-commons\ILocalData.cs" />
     <Compile Include="rhino-commons\LocalData.cs" />
     <Compile Include="ObjectExtensions.cs" />
