--- a/src/Magnum.Common.Tests/Magnum.Common.Specs.csproj
+++ b/src/Magnum.Common.Tests/Magnum.Common.Specs.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{0BEBC5E0-BDC4-421C-971B-2C5BE3204F7C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Magnum.Common.Tests</RootNamespace>
-    <AssemblyName>Magnum.Common.Tests</AssemblyName>
+    <RootNamespace>Magnum.Common.Specs</RootNamespace>
+    <AssemblyName>Magnum.Common.Specs</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -65,6 +65,7 @@
     <Compile Include="Range_Specs.cs" />
     <Compile Include="Reflection\CodeBuilder_Specs.cs" />
     <Compile Include="Reflection\Customer.cs" />
+    <Compile Include="Reflection\HandleRefType_Specs.cs" />
     <Compile Include="Reflection\InterOp_Specs.cs" />
     <Compile Include="Reflection\Performance_Specs.cs" />
     <Compile Include="SerializationSpecificationBase.cs" />
