--- a/src/Magnum.Serialization.Tests/Magnum.Serialization.Specs.csproj
+++ b/src/Magnum.Serialization.Tests/Magnum.Serialization.Specs.csproj
@@ -2,13 +2,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.50727</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{C72949DC-DCFC-457B-A7BD-A4D2FB437BF4}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Magnum.Serialization.Tests</RootNamespace>
-    <AssemblyName>Magnum.Serialization.Tests</AssemblyName>
+    <RootNamespace>Magnum.Serialization.Specs</RootNamespace>
+    <AssemblyName>Magnum.Serialization.Specs</AssemblyName>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
     <UpgradeBackupLocation>
