--- a/src/Magnum.Tests/Magnum.Specs.csproj
+++ b/src/Magnum.Tests/Magnum.Specs.csproj
@@ -2,13 +2,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.50727</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{700795B6-AEE6-4623-8E1B-318B9D6CFC12}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Default.Tests</RootNamespace>
-    <AssemblyName>Default.Tests</AssemblyName>
+    <RootNamespace>Magnum.Specs</RootNamespace>
+    <AssemblyName>Magnum.Specs</AssemblyName>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
     <UpgradeBackupLocation>
