--- a/src/Magnum.Transport.Tests/Magnum.Transport.Specs.csproj
+++ b/src/Magnum.Transport.Tests/Magnum.Transport.Specs.csproj
@@ -2,13 +2,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.50727</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{CE4C6C08-AA9E-45A4-A12E-BB6835DA91D8}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Magnum.Transport.Tests</RootNamespace>
-    <AssemblyName>Magnum.Transport.Tests</AssemblyName>
+    <RootNamespace>Magnum.Transport.Specs</RootNamespace>
+    <AssemblyName>Magnum.Transport.Specs</AssemblyName>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
     <UpgradeBackupLocation>
