--- a/src/Magnum.Infrastructure/Magnum.Infrastructure.csproj
+++ b/src/Magnum.Infrastructure/Magnum.Infrastructure.csproj
@@ -79,6 +79,7 @@
     <Compile Include="NHibernateRepository.cs" />
     <Compile Include="NHibernateRepositoryFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Magnum.Common\Magnum.Common.csproj">
