Making it complete

--- a/src/Magnum.Infrastructure/Magnum.Infrastructure.csproj
+++ b/src/Magnum.Infrastructure/Magnum.Infrastructure.csproj
@@ -76,8 +76,8 @@
     <Compile Include="..\SolutionVersion.cs">
       <Link>SolutionVersion.cs</Link>
     </Compile>
-    <Compile Include="NHibernateRepository.cs" />
-    <Compile Include="NHibernateRepositoryFactory.cs" />
+    <Compile Include="Repository\NHibernateRepository.cs" />
+    <Compile Include="Repository\NHibernateRepositoryFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitOfWork.cs" />
   </ItemGroup>
