--- a/src/Magnum.Common.Specs/Magnum.Common.Specs.csproj
+++ b/src/Magnum.Common.Specs/Magnum.Common.Specs.csproj
@@ -35,6 +35,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\log4net.dll</HintPath>
     </Reference>
+    <Reference Include="Machine.Specifications, Version=0.2.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\MSpec\Machine.Specifications.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework, Version=2.4.6.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\nunit.framework.dll</HintPath>
@@ -68,6 +72,7 @@
     <Compile Include="Reflection\HandleRefType_Specs.cs" />
     <Compile Include="Reflection\InterOp_Specs.cs" />
     <Compile Include="Reflection\Performance_Specs.cs" />
+    <Compile Include="Reflection\PropertyType_Specs.cs" />
     <Compile Include="SerializationSpecificationBase.cs" />
     <Compile Include="Reflection_Specs.cs" />
     <Compile Include="Repository\Repository_Specs.cs" />
