--- a/src/Magnum.Serialization.Specs/Magnum.Serialization.Specs.csproj
+++ b/src/Magnum.Serialization.Specs/Magnum.Serialization.Specs.csproj
@@ -63,8 +63,14 @@
     <Compile Include="Deserializer_Specs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReflectiveVisitor_Exp.cs" />
+    <Compile Include="XmlDeserialization_Specs.cs" />
+    <Compile Include="XmlSerialization_Specs.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Magnum.Common\Magnum.Common.csproj">
+      <Project>{C3650C32-0850-48B4-BE71-ECE9FACBD356}</Project>
+      <Name>Magnum.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Magnum.Serialization\Magnum.Serialization.csproj">
       <Project>{A6D8A4A5-D6F9-44DD-BFD4-F721CA9F3E01}</Project>
       <Name>Magnum.Serialization</Name>
