--- a/src/Magnum.Serialization/Magnum.Serialization.csproj
+++ b/src/Magnum.Serialization/Magnum.Serialization.csproj
@@ -43,19 +43,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BasicObjectSerializer.cs" />
-    <Compile Include="BEncodeObjectFormatter.cs" />
-    <Compile Include="Bencoder.cs" />
-    <Compile Include="BDecode.cs" />
-    <Compile Include="Cerealizer.cs" />
+    <Compile Include="BEncode\BEncodeObjectFormatter.cs" />
+    <Compile Include="BEncode\Bencoder.cs" />
+    <Compile Include="BEncode\BDecode.cs" />
     <Compile Include="IObjectFormatter.cs" />
     <Compile Include="IObjectSerializer.cs" />
-    <Compile Include="ISerializationFormatter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PropertySerializer.cs" />
     <Compile Include="SerializationOptimizer.cs" />
-    <Compile Include="XmlFormatter.cs" />
-    <Compile Include="XmlObjectFormatter.cs" />
-    <Compile Include="XmlObjectParser.cs" />
+    <Compile Include="Xml\XmlObjectFormatter.cs" />
+    <Compile Include="Xml\XmlObjectParser.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Magnum.Common\Magnum.Common.csproj">
