--- a/src/Magnum.Common/Magnum.Common.csproj
+++ b/src/Magnum.Common/Magnum.Common.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Serialization\ISerializationWriter.cs" />
     <Compile Include="Serialization\SerializationUtil.cs" />
     <Compile Include="DateTimeExtensions\TimeSpanExtensions.cs" />
+    <Compile Include="Threading\UpgradeableLock.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
