Moving along with a whole bunch of new code for reading logs and building metrics

--- a/src/Magnum.Common.Specs/Magnum.Common.Specs.csproj
+++ b/src/Magnum.Common.Specs/Magnum.Common.Specs.csproj
@@ -61,6 +61,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cache_Specs.cs" />
     <Compile Include="Cryptography\PublicKeyCrypto.cs" />
     <Compile Include="Cryptography\RijndaelCryptographyService_Specs.cs" />
     <Compile Include="DateTimeExtension_Specs.cs" />
