--- a/src/Magnum.Metrics/Magnum.Metrics.csproj
+++ b/src/Magnum.Metrics/Magnum.Metrics.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{564D6F6D-8C58-482A-A5F7-B7D84CC1B9F3}</ProjectGuid>
+    <ProjectGuid>{840ACB6A-A512-4886-8E88-A24D99342090}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Magnum.Metrics.Specs</RootNamespace>
-    <AssemblyName>Magnum.Metrics.Specs</AssemblyName>
+    <RootNamespace>Magnum.Metrics</RootNamespace>
+    <AssemblyName>Magnum.Metrics</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,10 +31,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework, Version=2.4.6.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\lib\nunit.framework.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -50,19 +46,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DelimitedContentMapper_Specs.cs" />
-    <Compile Include="HttpContentCollector_Specs.cs" />
-    <Compile Include="IisLogReader_Specs.cs" />
+    <Compile Include="ContentReader.cs" />
+    <Compile Include="HttpContentCollector.cs" />
+    <Compile Include="IContentCollector.cs" />
+    <Compile Include="IContentReader.cs" />
+    <Compile Include="IisLogEntry.cs" />
+    <Compile Include="IisLogReader.cs" />
+    <Compile Include="ILineReader.cs" />
+    <Compile Include="LineReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Magnum.Common\Magnum.Common.csproj">
       <Project>{C3650C32-0850-48B4-BE71-ECE9FACBD356}</Project>
       <Name>Magnum.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Magnum.Metrics\Magnum.Metrics.csproj">
-      <Project>{840ACB6A-A512-4886-8E88-A24D99342090}</Project>
-      <Name>Magnum.Metrics</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
