Renamed classes to start getting some structure

--- a/src/Magnum.Metrics.Specs/Magnum.Metrics.Specs.csproj
+++ b/src/Magnum.Metrics.Specs/Magnum.Metrics.Specs.csproj
@@ -52,7 +52,7 @@
   <ItemGroup>
     <Compile Include="DelimitedContentMapper_Specs.cs" />
     <Compile Include="HttpContentCollector_Specs.cs" />
-    <Compile Include="IisLogReader_Specs.cs" />
+    <Compile Include="WebServerLogReader_Specs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
