--- a/src/Magnum.ProtocolBuffers.Specs/Magnum.ProtocolBuffers.Specs.csproj
+++ b/src/Magnum.ProtocolBuffers.Specs/Magnum.ProtocolBuffers.Specs.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Specification.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestMessage.cs" />
+    <Compile Include="TypeExtension_Specs.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Magnum.ProtocolBuffers\Magnum.ProtocolBuffers.csproj">
