--- a/src/Magnum.ProtocolBuffers/Magnum.ProtocolBuffers.csproj
+++ b/src/Magnum.ProtocolBuffers/Magnum.ProtocolBuffers.csproj
@@ -37,9 +37,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="FieldMapping.cs" />
     <Compile Include="FieldRules.cs" />
+    <Compile Include="MessageMap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TypeExtensions.cs" />
   </ItemGroup>
