--- a/src/Magnum.ProtocolBuffers.Specs/Magnum.ProtocolBuffers.Specs.csproj
+++ b/src/Magnum.ProtocolBuffers.Specs/Magnum.ProtocolBuffers.Specs.csproj
@@ -45,6 +45,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Messages_have_fields.cs" />
     <Compile Include="Messages_have_names.cs" />
     <Compile Include="Message_fields_can_have_default_values.cs" />
     <Compile Include="Message_fields_have_different_rules.cs" />
