--- a/src/Magnum.ProtocolBuffers.Specs/Magnum.ProtocolBuffers.Specs.csproj
+++ b/src/Magnum.ProtocolBuffers.Specs/Magnum.ProtocolBuffers.Specs.csproj
@@ -54,9 +54,10 @@
     <Compile Include="Message_fields_have_assigned_number_tags.cs" />
     <Compile Include="Message_fields_have_different_types.cs" />
     <Compile Include="Message_fields_have_names.cs" />
+    <Compile Include="TestMessages\SearchRequest.cs" />
     <Compile Include="Specification.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestMessage.cs" />
+    <Compile Include="TestMessages\TestMessage.cs" />
     <Compile Include="TypeExtension_Specs.cs" />
   </ItemGroup>
   <ItemGroup>
