--- a/src/Magnum.ProtocolBuffers/Magnum.ProtocolBuffers.csproj
+++ b/src/Magnum.ProtocolBuffers/Magnum.ProtocolBuffers.csproj
@@ -37,6 +37,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommunicationModel.cs" />
     <Compile Include="FieldMap.cs" />
     <Compile Include="FieldRules.cs" />
     <Compile Include="Internal\IMapping.cs" />
@@ -45,6 +46,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProtoMappingException.cs" />
     <Compile Include="ReflectionHelper.cs" />
+    <Compile Include="Internal\StringVisitor.cs" />
     <Compile Include="TypeExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
