Worked on binary serialization parts

--- a/src/Magnum.ProtocolBuffers.Specs/Magnum.ProtocolBuffers.Specs.csproj
+++ b/src/Magnum.ProtocolBuffers.Specs/Magnum.ProtocolBuffers.Specs.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Message_fields_have_assigned_number_tags.cs" />
     <Compile Include="Message_fields_have_different_types.cs" />
     <Compile Include="Message_fields_have_names.cs" />
+    <Compile Include="Serialization\CodedOutputStream_Specs.cs" />
     <Compile Include="String_mapping.cs" />
     <Compile Include="TestMappings\SearchRequestMapping.cs" />
     <Compile Include="TestMessages\SearchRequest.cs" />
