--- a/src/Magnum.ProtocolBuffers/Magnum.ProtocolBuffers.csproj
+++ b/src/Magnum.ProtocolBuffers/Magnum.ProtocolBuffers.csproj
@@ -49,6 +49,7 @@
     <Compile Include="ProtoMappingException.cs" />
     <Compile Include="ReflectionHelper.cs" />
     <Compile Include="Internal\StringVisitor.cs" />
+    <Compile Include="Serialization\CodedInputStream.cs" />
     <Compile Include="Serialization\CodedOutputStream.cs" />
     <Compile Include="Serialization\IMessageDescriptor.cs" />
     <Compile Include="Serialization\MessageDescriptor.cs" />
